# Faida-app

./: .env  .env.development  .env.example  .env.local  .flaskenv  .gitignore  CLAUDE.md  Dockerfile  LICENSE.md  README.md  azure.yaml  create-issues.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  run.py
.claude/commands/: commit-message.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: azure-dev.yaml  build-android.yml  deploy.yml
apps/: 404.html  500.html  __init__.py  achat_stock.html  cli.py  config.py  decorators.py  docker-compose.yml  errors.py  models.py  routes.py
apps/auth/: __init__.py  edit_stock_purchase.html  profile.html  routes.py  sorties_cash.html  utils.py
apps/authentication/: models.py  routes.py  util.py
apps/data/: seed_data.json
apps/errors/: handlers.py
apps/home/: forms.py  routes.py  seed_data.py  utils.py
apps/main/: 403.html  __init__.py  achat_stock.html  client_map.html  confirm_delete_stock_purchase.html  forms.py  navigation.html  page_header.html  routes.py  sidenav.html  utils.py
apps/settings/: production.py
docs/: BUG_REPORT.md  FEATURE_REQUEST.md  git-workflow-guide.md  github-issues.md
faida-twa/: settings.gradle
faida-twa/app/: build.gradle
infra/: main.bicep  web.bicep
migrations/: env.py
migrations/versions/: 0c9ff7aca65f_change_stock_balance_to_numeric.py  2e07089eecc1_initial_migration_with_integer_stock_.py  481e195d332f_fixed_model_relationships.py  (+12 more)
src/: Dockerfile  entrypoint-dev.sh  entrypoint.sh  gunicorn-cfg.py  requirements.txt  run.py  setup.sh
(+145 files in other folders)
